[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataPanel" type="PanelContainer" parent="MainContainer"]
margin_right = 354.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/DataPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 347.0
margin_bottom = 393.0

[node name="Header" type="Label" parent="MainContainer/DataPanel/Container"]
margin_right = 340.0
margin_bottom = 14.0
text = "Data"

[node name="Console" type="TextEdit" parent="MainContainer/DataPanel/Container"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 342.0
size_flags_vertical = 3
readonly = true
highlight_current_line = true

[node name="Button" type="Button" parent="MainContainer/DataPanel/Container"]
margin_top = 346.0
margin_right = 340.0
margin_bottom = 386.0
rect_min_size = Vector2( 0, 40 )
text = "Get Random Data >"

[node name="ResultPanel" type="PanelContainer" parent="MainContainer"]
margin_left = 366.0
margin_right = 720.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/ResultPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 347.0
margin_bottom = 393.0

[node name="Header" type="Label" parent="MainContainer/ResultPanel/Container"]
margin_right = 340.0
margin_bottom = 14.0
text = "Result"

[node name="Console" type="TextEdit" parent="MainContainer/ResultPanel/Container"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 386.0
size_flags_vertical = 3
readonly = true
highlight_current_line = true

[connection signal="pressed" from="MainContainer/DataPanel/Container/Button" to="." method="_on_Button_pressed"]
